--- a/_posts/0000-01-02-subhayu99.md
+++ b/_posts/0000-01-02-subhayu99.md
@@ -2,10 +2,9 @@
 
 layout: slide
 
-title: "Welcome to our second slide!"
+title: "Heyy! Welcome to our second slide!"
 
 ---
 
-Hey!
 
-Use the left arrow to go back!
+You can use the left arrow to go back!
